--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h1>
 					Hi I'm Rainier !
 				</h1>
-				<img src="images/profile.jpg" class="img-circle zoom" width="150px" alt="Rainier GRAND">
+				<img src="profile.jpg" class="img-circle zoom" width="150px" alt="Rainier GRAND">
 				<p>	I was born in Tahiti 🌴, I'm studying Finance at IÉSEG School of Management and I am excited to discover coding thanks to Le Wagon.	</p>
 				<a href="https://www.lewagon.com/" class="btn-purple" target="_blank">Discover Le Wagon</a> 
 			</div>
